[4][BUG][LOW] Account information. Confirmation message misalignment

--- a/src/main/app/user/components/information/information.scss
+++ b/src/main/app/user/components/information/information.scss
@@ -1,15 +1,6 @@
 form { margin: 0px 10px;
 
 }
-.msi-registration-form {
-    width: 360px;
-    margin: auto;
-
-    .alert{
-        width:330px;
-
-    }
-}
 
 .msi-order-form {
     width: 360px;
